Fix misalignment of radio buttons in 2.x UI

--- a/omod/src/main/webapp/resources/drugOrderWidget.css
+++ b/omod/src/main/webapp/resources/drugOrderWidget.css
@@ -90,6 +90,13 @@
 	vertical-align: middle;
 }
 
+.order-field-radio-group> * {
+	display: inline;
+	float: none !important;
+	min-width: initial;
+	vertical-align: middle;
+}
+
 .order-field-label:after {
 	content: ": ";
 	white-space: pre;
